# catch-up

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md
.specify/: feature.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  railway.json  railway.worker.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_trips_overlaps.py  0003_significant_events.py  0004_member_digest_opt_out.py  0005_member_photo_key.py
backend/scripts/: entrypoint.sh
backend/src/catchup/: __init__.py  app.py  cli.py  config.py  db.py  errors.py  logging_config.py  models.py
backend/src/catchup/api/: auth.py  events.py  members.py  overlaps.py  places.py  schemas.py  trips.py
backend/src/catchup/auth/: deps.py  ratelimit.py  security.py  service.py  tokens.py
backend/src/catchup/events/: service.py  validation.py
backend/src/catchup/members/: service.py  validation.py
backend/src/catchup/notify/: __init__.py  base.py  console.py  email_resend.py
backend/src/catchup/overlaps/: detection.py  runner.py  worker.py
backend/src/catchup/places/: geocoder.py  parse.py  service.py
backend/src/catchup/storage/: __init__.py  photos.py
backend/tests/: conftest.py  test_auth_smoke.py  test_directory_smoke.py  test_event_validation.py  test_events_smoke.py  test_map_smoke.py  test_members_smoke.py  test_overlap_detection.py  test_overlap_notify_smoke.py  test_overlap_runner_smoke.py  test_place_parse.py  test_tokens.py  test_trip_validation.py  test_trips_smoke.py  test_validation.py
(+64 files in other folders)
