[project]
name = "catchup"
version = "0.1.0"
description = "catch-up — private class map app: members, magic-link auth & profiles"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Proprietary" }
authors = [{ name = "Honza Chromec", email = "honza@clementine-solutions.com" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23",
    "sqlalchemy>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "itsdangerous>=2.2",
    "boto3>=1.35",
    "httpx>=0.28",
    "phonenumbers>=8.13",
    "pillow>=11.0",
    "typer>=0.15",
    "python-multipart>=0.0.18",
]

[project.scripts]
catchup-roster = "catchup.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catchup"]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI Depends/Header-in-defaults idiom
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "smoke: requires a live Postgres at $DATABASE_URL",
]
